<resources>
    <string name="noticeText">history.html</string>
    <string name="aboutText">about.html</string>
    <string name="topMenu">Customized Menu</string>
    <string name="tguide00">Screen direction</string>
    <string name="tguide01">Cut Margin</string>
    <string name="tguide02">Facing Pages</string>
    <string name="tguide03">Display Size</string>
    <string name="selalgo00">Nearest Neighbor</string>
    <string name="selalgo01">Bi-Linear</string>
    <string name="selalgo02">Bi-Linear(2 Step)</string>
    <string name="selalgo03">Bi-Cubic</string>
    <string name="selalgo04">Bi-Cubic(2 Step)</string>
    <string name="selalgo05">Lanczos3</string>
    <string name="selrota00">No rotation</string>
    <string name="selrota01">90 degrees</string>
    <string name="selrota02">180 degrees</string>
    <string name="selrota03">270 degrees</string>
    <string name="selsize00">Original Size</string>
    <string name="selsize01">Fit Width</string>
    <string name="selsize02">Fit Height</string>
    <string name="selsize03">Fit Screen</string>
    <string name="selsize04">Full Screen</string>
    <string name="selsize05">Full Screen(for Spread)</string>
    <string name="selsize06">Fit Width(for Spread)</string>
    <string name="selsize07">Fit Screen(for Spread)</string>
    <string name="selview00">Normal</string>
    <string name="selview01">Dual View</string>
    <string name="selview02">Half View</string>
    <string name="selview03">Tile View</string>
    <string name="selview04">Half / Dual View</string>
    <string name="paper00">Screen Size(Portrait)</string>
    <string name="paper01">800x1280</string>
    <string name="paper02">720x1280</string>
    <string name="paper03">540x960</string>
    <string name="paper04">480x800</string>
    <string name="picsize00">Original Size</string>
    <string name="picsize01">Original x1</string>
    <string name="picsize02">Original x2</string>
    <string name="picsize03">Original x3</string>
    <string name="picsize04">Fit Screen</string>
    <string name="picsize05">Fit Screen\n(Ignore margins)</string>
    <string name="picsize06">Fit Screen\n(for Spread)</string>
    <string name="picsize07">Fit Screen\n(for Spread, Ignore margins)</string>
    <string name="ascmode00">Vertical</string>
    <string name="ascmode01">Horizontal</string>
    <string name="ascmode02">Blend</string>
    <string name="defaultFont">System Font</string>
    <string name="nextPage">Next Page</string>
    <string name="prevPage">Prev Page</string>
    <string name="pageSelect">Select Page</string>
    <string name="pagePrev">Shift to Prev Page</string>
    <string name="pageNext">Shift to Next Page</string>
    <string name="pageTop">Jump to Top Page</string>
    <string name="pageLast">Jump to Last Page</string>
    <string name="fileNextTop">Next File(Top Page)</string>
    <string name="fileNextLast">Next File(Last Page)</string>
    <string name="filePrevTop">Prev File(Top Page)</string>
    <string name="filePrevLast">Prev File(Last Page)</string>
    <string name="fileNextMark">Next File(Marked Page)</string>
    <string name="filePrevMark">Prev File(Marked Page)</string>
    <string name="loading">Loading</string>
    <string name="reading">File List Parsing</string>
    <string name="epubParsing">EPUB Parsing</string>
    <string name="htmlParsing">HTML Parsing</string>
    <string name="textParsing">Text Parsing</string>
    <string name="formatting">Formatting</string>
    <string name="readxref">Loading XRef</string>
    <string name="readpage">Loading Page Object</string>
    <string name="download">Downloading File</string>
    <string name="imageParsing">Image Parsing</string>
    <string name="loaderr">Image Load Error.</string>
    <string name="localStrage">Local Storage</string>
    <string name="undefine">Undefined</string>
    <string name="operateSec">Operation</string>
    <string name="settingSec">Display Settings</string>
    <string name="otherSec">Other</string>
    <string name="chgOpeMenu">Invert the touch</string>
    <string name="pageWayMenu">Front cover</string>
    <string name="pageWayMenuSub1">Right</string>
    <string name="pageWayMenuSub2">Left</string>
    <string name="scrlWayMenu">Scroll</string>
    <string name="scrlWay2Menu">Scroll Direction</string>
    <string name="scrlWayMenuSub1">V->H</string>
    <string name="scrlWayMenuSub2">H->V</string>
    <string name="helpMenu">Operations</string>
    <string name="onlineMenu">Operation Help</string>
    <string name="sortMenu">Sort</string>
    <string name="setTopMenu">Top Menu Settings</string>
    <string name="setMenu">Settings</string>
    <string name="dualMenu">Dual View</string>
    <string name="halfMenu">Half View</string>
    <string name="normMenu">Normal View</string>
    <string name="addDirMenu">Regist Directory</string>
    <string name="listModeMenu">Choose List Mode</string>
    <string name="shortCut">Create Shortcut</string>
    <string name="selectSv">Select Server</string>
    <string name="refresh">Refresh</string>
    <string name="delMenu">Delete Bookmark</string>
    <string name="marker">Marker</string>
    <string name="addBookmarkMenu">Add Favorite</string>
    <string name="selBookmarkMenu">Select Favorite</string>
    <string name="selDirTreeMenu">Select Sub Directory</string>
    <string name="selChapterMenu">Select Chapter</string>
    <string name="searchTextMenu">Set Search Text</string>
    <string name="searchTextMessage">Enter a search string.</string>
    <string name="searchJumpMenu">Select Search Result</string>
    <string name="searchJumpTitle">Search Result</string>
    <string name="searchJumpNoText">There are no Search Text</string>
    <string name="searchJumpNotFound">There are no Search Result</string>
    <string name="thumbSwt">Thumbnail View</string>
    <string name="exitMenu">Exit</string>
    <string name="noticeMenu">Notice</string>
    <string name="aboutMenu">About</string>
    <string name="downloadCountMenu">Number of Downloads</string>
    <string name="licenseMenu">License</string>
    <string name="noiseMenu">Operation by noise</string>
    <string name="playMenu">Auto Play</string>
    <string name="thumbMenu">Delete Thumbnail Cache</string>
    <string name="shareMenu">Share</string>
    <string name="shareRMenu">Share (Right Image)</string>
    <string name="shareLMenu">Share (Left Image)</string>
    <string name="delshareMenu">Remove temp files for sharing</string>
    <string name="reverseMenu">Reverses order</string>
    <string name="rotateMenu">Screen direction</string>
    <string name="pageselMenu">Select page</string>
    <string name="sharpenMenu">Sharpen image</string>
    <string name="invertMenu">Invert color</string>
    <string name="grayMenu">Gray scale</string>
    <string name="coloringMenu">Auto Coloring</string>
    <string name="moireMenu">Moire mitigation</string>
    <string name="topsingleMenu">Single show the first page</string>
    <string name="brightMenu">Brightness(%)</string>
    <string name="gammaMenu">Gamma compensation(%)</string>
    <string name="bklightMenu">Backlight(%)</string>
    <string name="mgnCutMenu">Remove white margin</string>
    <string name="mgnCutColorMenu">Color to remove margin</string>
    <string name="imgRotaMenu">Image Rotate</string>
    <string name="imgConfMenu">Image Config</string>
    <string name="txtConfMenu">Text Config</string>
    <string name="algoriMenu">Interpolation</string>
    <string name="picSize">Illustrations Size</string>
    <string name="ascMode">Ascii View Mode</string>
    <string name="sizeSection">Size settings</string>
    <string name="fontTop">Head Font(%)</string>
    <string name="fontBody">Body Font(%)</string>
    <string name="fontRubi">Rubi Font(%)</string>
    <string name="fontInfo">Information Font(%)</string>
    <string name="spaceW">Lines between(%)</string>
    <string name="spaceH">Characters between(%)</string>
    <string name="marginW">Left/Right Margins(%)</string>
    <string name="marginH">Top/Bottom Margins(%)</string>
    <string name="delTitle"></string>
    <string name="delMsg">Are you sure to delete?</string>
    <string name="delErrorMsg">The file could not be deleted.</string>
    <string name="renameErrorMsg">The file could not be renamed.</string>
    <string name="downMsg1">Download to </string>
    <string name="downMsg2"></string>
    <string name="downErrorMsg">The file could not be downloaded.</string>
    <string name="scTitle">Create Shortcut</string>
    <string name="scMsg">Create a shortcut on the home screen\nEnter shortcut name</string>
    <string name="mkTitle">Set Marker</string>
    <string name="mkMsg">To coloring the items that contain the input string in the file name.</string>
    <string name="renTitle">Rename</string>
    <string name="renMsg">Enter the file name after the change. (Except for the extension.)</string>
    <string name="backEnd">Push once again to exit.</string>
    <string name="saTitle1">Select Server</string>
    <string name="saTitle2">Please set your server to long tap</string>
    <string name="compTitle">Expand File</string>
    <string name="flTitle">File List</string>
    <string name="svTitle">Server Settings</string>
    <string name="svNameTitle">Display Name</string>
    <string name="svHostTitle">Host (Server/Shared Folder)</string>
    <string name="svUserTitle">Account Name (Anonymous is blank, guest is guest)</string>
    <string name="svPassTitle">Password</string>
    <string name="svProviderTitle">URL</string>
    <string name="svNameHist">Comics Server</string>
    <string name="svHostHist">192.168.1.120/comics (Example)</string>
    <string name="svUserHist">Domain;User</string>
    <string name="svPassHist">Password</string>
    <string name="svProviderUnselected">Please select</string>
    <string name="svProviderSelected">Selected</string>
    <string name="svNotFound">The specified server is not registered.</string>
    <string name="resetLocal">Resets the saved folder location.</string>
    <string name="psAdd100">+100</string>
    <string name="psAdd10">+10</string>
    <string name="psAdd1">+1</string>
    <string name="psSub100">-100</string>
    <string name="psSub10">-10</string>
    <string name="psSub1">-1</string>
    <string name="psSet">Set</string>
    <string name="btnOK">OK</string>
    <string name="btnSearch">Search</string>
    <string name="btnApply">Apply</string>
    <string name="btnRevert">Revert</string>
    <string name="btnClear">Clear</string>
    <string name="btnCancel">Cancel</string>
    <string name="opLabel">Please select a location pattern tap page turning.</string>
    <string name="opReverse">Reversing the direction by tapping</string>
    <string name="opCheck">Check</string>
    <string name="opPattern">Pattern</string>
    <string name="opRateStr">Rate of &lt; and &gt;</string>
    <string name="lastTitle">Last Page</string>
    <string name="topTitle">Top Page</string>
    <string name="backTitle">Close</string>
    <string name="cdBtnClose">Close Viewer</string>
    <string name="cdBtnExit">Exit ComittoNxX</string>
    <string name="cdBtnCancel">Cancel</string>
    <string name="cdBtnNext">Open next file\n(marked page)</string>
    <string name="cdBtnNextTop">Open next file\n(top page)</string>
    <string name="cdBtnPrev">Open prev file\n(marked page)</string>
    <string name="cdBtnPrevLast">Open prev File\n(last page)</string>
    <string name="cdChkMark">Save to bookmark.</string>
    <string name="cdChkResume">Record as the last opened file.</string>
    <string name="idSaveConfig">Save the settings</string>
    <string name="pnChkDisp">Display the page number.</string>
    <string name="timeChkDisp">Display the time and battery.</string>
    <string name="pnTxtFormat">Format :</string>
    <string name="pnTxtPos">Position :</string>
    <string name="mkChk1">Filter</string>
    <string name="mkChk2">Apply to directory</string>
</resources>