<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >

	<LinearLayout
		android:id="@+id/header"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/text_message"
			android:layout_width="320sp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="20sp"
			android:textColor="#FFFFFFFF"
			android:text="@string/settingSec" />
	
		<ImageView
			android:layout_width="fill_parent"
			android:layout_height="1sp"
			android:background="#FFFFFFFF"
			android:layout_marginTop="6sp" />
	</LinearLayout>

	<ScrollView
		android:id="@+id/ScrollView"
		android:layout_width="320sp"
		android:layout_height="wrap_content"
		android:layout_weight="1" >

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="8dip"
			android:orientation="vertical" >
		
			<TextView
				android:id="@+id/label_bklight"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/bklightMenu" />
	
			<SeekBar
				android:id="@+id/seek_bklight"
				style="@style/PageSeekBar"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<ImageView
				android:layout_width="fill_parent"
				android:layout_height="1sp"
				android:background="#FFFFFFFF"
				android:layout_marginTop="6sp"
				android:layout_marginBottom="16sp" />

			<TextView
				android:id="@+id/label_fontbody"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/fontBody" />
	
			<SeekBar
				android:id="@+id/seek_fontbody"
				style="@style/PageSeekBar"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<TextView
				android:id="@+id/label_fontinfo"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/fontInfo" />
	
			<SeekBar
				android:id="@+id/seek_fontinfo"
				style="@style/PageSeekBar"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<TextView
				android:id="@+id/label_marginw"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/marginW" />
	
			<SeekBar
				android:id="@+id/seek_marginw"
				style="@style/PageSeekBar"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

			<TextView
				android:id="@+id/label_marginh"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10sp"
				android:layout_marginRight="10sp"
				android:layout_gravity="left"
				android:text="@string/marginH" />
	
			<SeekBar
				android:id="@+id/seek_marginh"
				style="@style/PageSeekBar"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="4sp"
				android:paddingRight="4sp" />

		</LinearLayout>
	</ScrollView>
				
	<LinearLayout
		android:id="@+id/footer"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="vertical" >
    
		<CheckBox
			android:id="@+id/chk_save"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="left|center"
			android:textSize="17sp"
			android:text= "@string/idSaveConfig" />
	
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:gravity="center"
			android:orientation="horizontal" >
	
			<Button
				android:id="@+id/btn_revert"
				android:layout_width="100sp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:textSize="20sp"
				android:text="@string/btnRevert" />
	
			<Button
				android:id="@+id/btn_apply"
				android:layout_width="100sp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:textSize="20sp"
				android:text="@string/btnApply" />
	
			<Button
				android:id="@+id/btn_ok"
				android:layout_width="100sp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:textSize="20sp"
				android:text="@string/btnOK" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
