<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dip"
    android:background="@drawable/dialogframe_transparent" >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="#FFFFFFFF"
        android:text="@string/mkTitle" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="#FFFFFFFF"
        android:layout_marginTop="0sp"
        android:layout_marginBottom="4sp" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="left"
        android:text="@string/mkMsg" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
		android:inputType="text"
        android:autoText="false"
        android:capitalize="none"
        android:gravity="fill_horizontal"
        android:scrollHorizontally="true"
		android:selectAllOnFocus="true"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chk1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mkChk1" />

        <CheckBox
            android:id="@+id/chk2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mkChk2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:padding="4dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/btnCancel" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/btnSearch" />

    </LinearLayout>

</LinearLayout>