<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialogframe_transparent">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@color/white1"
        android:text="@string/svTitle" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/white1"
        android:layout_marginTop="0sp"
        android:layout_marginBottom="4sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
			android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:gravity="left"
            android:text="@string/svNameTitle" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:hint="@string/svNameHist"
            android:maxLength="40"
            android:required="true"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:id="@+id/text_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:gravity="left"
            android:text="@string/svHostTitle" />

        <EditText
            android:id="@+id/edit_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:hint="@string/svHostHist"
            android:maxLength="100"
            android:required="true"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:id="@+id/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:gravity="left"
            android:text="@string/svUserTitle" />

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:autoText="false"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:hint="@string/svUserHist"
            android:maxLength="100"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <TextView
            android:id="@+id/text_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:gravity="left"
            android:text="@string/svPassTitle" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:gravity="fill_horizontal"
            app:passwordToggleEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:scrollHorizontally="true"
            android:inputType="textPassword"
            android:hint="Password" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:padding="4dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/btnCancel" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/btnOK" />

    </LinearLayout>

</LinearLayout>